# rust-template

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ci.sh
.github/workflows/: ci.yaml
scripts/: ci.py
src/: lib.rs
